objects/EXPRN__Scoring_Model__c.object
<CustomObject>
    <description>Stores scoring models for pulling reports</description>
    <fields>
        <fullName>EXPRN__BIQ_Configuration__c</fullName>
        <label>BIQ Configuration</label>
        <referenceTo>EXPRN__BIQ_Configuration__c</referenceTo>
        <relationshipLabel>Experian Scoring Model</relationshipLabel>
        <relationshipName>Scoring_Model</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Is_Blended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the model is blended or not</description>
        <label>Is Blended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Model__c</fullName>
        <description>Model of Experian bureau</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Experian Scoring Model</label>
    <listViews>
        <fullName>EXPRN__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Scoring Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Scoring Model</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>